# agent_core

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
agent_core/: agent.py  allowlist.py  approval_registry.py  boundary.py  channels.py  client.py  config.py  conversation.py  daemon.py  git_helpers.py  inference.py  learning.py  learning_scanner.py  profile.py  reasoning.py  retrieval.py  runtime.py  scratchpad.py  websearch.py  wisdom.py
agent_core/adapters/: cli.py  discord_gateway.py
agent_core/capture/: __init__.py  layer.py  project.py  query.py  shape.py  store.py  stub.py  tools.py
agent_core/commands/: __init__.py  _builtin_impls.py  base.py  (+2 more)
tests/: conftest.py  test_agent.py  test_agent_register_tools.py  test_allowlist.py  test_approval_registry.py  test_boundary.py  test_builtin_commands.py  test_builtin_tools.py  test_channels.py  test_chunker.py  test_cli.py  test_client.py  test_commands_base.py  test_commands_registry.py  test_config.py  test_contract.py  test_conversation.py  test_converter.py  test_daemon.py  test_daemon_approval_routing.py  test_discord_gateway.py  test_fetcher.py  test_frontmatter.py  test_git_helpers.py  test_inference.py  test_learning.py  test_learning_scanner.py  test_learning_scanner_dedupe.py  test_learning_scanner_extract.py  test_learning_scanner_orchestrator.py  test_learning_scanner_prefilter.py  test_profile.py  test_prompts.py  test_protocol.py  test_reasoning.py  test_reasoning_smoke.py  test_retrieval.py  test_runtime.py  test_sanitizer.py  test_scanner_take_pending.py  (+13 more)
(+69 files in other folders)
