[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent_core"
version = "0.3.1"
description = "Shared library for the agent ecosystem"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "trafilatura>=1.12.0",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.0",
]

[project.optional-dependencies]
discord = [
    "discord.py>=2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "uvicorn[standard]>=0.29.0",
    "starlette>=0.37.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
